resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: armor
  namespace: armor-reflector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: armor
  template:
    metadata:
      labels:
        app: armor
    spec:
      containers:
        - name: armor
          image: containers.cisco.com/partbhar/armour:1.0.0
          ports:
            - containerPort: 3000
          command: ["armor"] 
---

apiVersion: v1
kind: Service
metadata:
  name: armor
  namespace: armor-reflector
spec:
  selector:
    app: armor
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reflector
  namespace: armor-reflector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reflector
  template:
    metadata:
      labels:
        app: reflector
    spec:
      containers:
        - name: reflector
          image: containers.cisco.com/partbhar/reflector:1.0.0
          ports:
            - containerPort: 8080
          command: ["python3", "/app/app.py"] 
---
apiVersion: v1
kind: Service
metadata:
  name: reflector
  namespace: armor-reflector
spec:
  selector:
    app: reflector
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: armor-ingress
  namespace: armor-reflector
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "cisco-acme"
spec:
  ingressClassName: nginx
  rules:
  - host: "armor-reflector.cisco.com"
    http:
      paths:
      - backend:
          service:
            name: armor
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - "armor-reflector.cisco.com"
    secretName: armor-reflector-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reflector-ingress
  namespace: armor-reflector
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "cisco-acme"
spec:
  ingressClassName: nginx
  rules:
  - host: "reflector.cisco.com"
    http:
      paths:
      - backend:
          service:
            name: reflector
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - "reflector.cisco.com"
    secretName: reflector-tls
